<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/depItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dimg"
                android:layout_width="@dimen/itemTextSize"
                android:layout_height="@dimen/itemTextSize"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/dflt"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/flt"
                android:textColor="@color/white"
                android:textSize="@dimen/itemTextSize"/>
        </LinearLayout>

        <TextView
            android:id="@+id/des"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/item2"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/des"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/std"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/std"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/abt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/item2"
            android:gravity="center"
            android:text="@string/abt"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/stn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/stn"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/aan"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/item2"
            android:gravity="center"
            android:text="@string/aan"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/dstatus"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>
    </LinearLayout>

</LinearLayout>