<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/arrItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/aimg"
                android:layout_width="@dimen/itemTextSize"
                android:layout_height="@dimen/itemTextSize"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/aflt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/flt"
                android:textColor="@color/white"
                android:textSize="@dimen/itemTextSize"/>
        </LinearLayout>

        <TextView
            android:id="@+id/org"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/item2"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/org"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/sta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/sta"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/tdt"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/item2"
            android:gravity="center"
            android:text="@string/tdt"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/stp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/stp"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/abp"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@drawable/item2"
            android:gravity="center"
            android:text="@string/abp"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>

        <TextView
            android:id="@+id/astatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="marquee"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="@dimen/itemTextSize"/>
    </LinearLayout>

</LinearLayout>